[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
rppal = { version = "0.13.1", features = ["hal", "hal-unproven"] }
# gpio = "0.4"
dht11 = "0.3.1"
actix-web = "3"
util = {path="../util"}
